<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linear_layout_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/linear_layout_main_activity"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="12dp"
        android:text="@string/text_view_main_title"
        android:textColor="@color/text_view_main_title"
        android:textSize="24sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="12dp"
        android:text="@string/text_view_review"
        android:textColor="@color/text_view_black"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edit_text_chatter"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="12dp"
        android:background="@color/edit_text_background"
        android:gravity="top"
        android:hint="@string/edit_text_message_hint"
        android:padding="4dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="12dp"
        android:text="@string/text_view_nominee"
        android:textColor="@color/text_view_black"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edit_text_nominee"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="12dp"
        android:background="@color/edit_text_background"
        android:gravity="top"
        android:hint="@string/edit_text_message_hint"
        android:padding="4dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="12dp"
        android:text="@string/text_view_category"
        android:textColor="@color/text_view_black"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioButton android:id="@+id/radio_film"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Best Picture"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/radio_actor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Best Actor"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/radio_actress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Best Actress"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/radio_editing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Film Editing"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/radio_effects"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Visual Effects"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_post_chatter"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginRight="16dp"
            android:text="@string/button_post_chatter"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/button_view_chatter"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/button_view_chatter"
            android:textAllCaps="false"
            />
    </LinearLayout>

</LinearLayout>